--- a/style.css
+++ b/style.css
@@ -1,44 +1,97 @@
 body {
     margin: 0;
-}
-
-#container-big {
-    width: auto;
-    height: auto;
+    padding: 0;
 }
 
 #menu {
-    width: 100%;
-    height: 80px;
-    padding: 20px;
+    height: 5vh;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
     background-color: lightblue;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-
-
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
-.przedmioty {
-    width: 70%;
-    height: 80%;
-    margin: auto;
-    background-color: antiquewhite;
+#przedmioty_koszyk {
+    background-color: cadetblue;
+    margin: 0;
+    display: flex;
+    position: absolute;
+    top: 0;
+    padding-top: 11vh;
+    bottom: 0;
 }
 
 
-.koszyk {
-    width: 30%;
-    height: 80%;
-    margin: auto;
-    background-color: lightpink;
-    font-size: x-large;
+#przedmioty {
+    width: 70vw;
+    height: 100%;
+    background-color: lightgreen;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+}
+
+#koszyk {
+    width: 30vw;
+    height: 100%;
+    background-color: burlywood;
+    overflow-y: scroll;
+
 }
 
 .menu-button {
     height: auto;
-    width: 300px;
+    width: 200px;
     background-color: cadetblue;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 3vh;
+}
+
+.nowy_przedmiot{
+    max-height: 300px;
+    max-width: 200px;
+    min-height: 300px;
+    min-width: 200px;
+    background-color: grey;
+    margin: 20px;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.nowy_przedmiot > img{
+    width: 100%;
+    max-height: 200px;
+}
+
+.nazwa_produktu{
+    background-color: lightblue;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.cena_dodaj {
+    display: block;
+    width: 100%;
+}
+
+.cena {
+    background-color: lightblue;
+    width: 40%;
+    float: left;
+    text-align: center;
+}
+
+.dodaj {
+    background-color: lightblue;
+    width: 40%;
+    float: right;
+    text-align: center;
+
 }
